--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
     "express": "^5.0.0-alpha.8",
     "jsonwebtoken": "^8.5.1",
